BusOne/src/objects/EM_Event_Speaker_vod__c.object
<CustomObject>
    <description>Speaker at an event for Veeva Event Management.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <formula>CASESAFEID(Speaker_vod__r.Account_vod__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the contract being applied to a speaker for a particular event for Veeva Event Management.</description>
        <label>Contract</label>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Event Speakers</relationshipLabel>
        <relationshipName>Event_Speakers_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Event Speaker Credentials. This value is pulled in from the Credentials_vod field on Speaker record.</description>
        <formula>Text(Speaker_vod__r.Credentials_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time_vod__c</fullName>
        <description>End time of the event</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event which the speaker is speaking at.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Speakers</relationshipLabel>
        <relationshipName>EM_Event_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <description>Event Speaker First Name. This value is pulled in from the First_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.First_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Event Speaker Last Name. This value is pulled in from the Last_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Last_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if a speaker has opted in to receiving a meal.</description>
        <label>Meal Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference_vod__c</fullName>
        <description>Meal preference of a speaker. Custom values can be added to this picklist.</description>
        <label>Meal Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name_vod__c</fullName>
        <description>Event Speaker Middle Name. This value is pulled in from the Middle_Name_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Middle_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nickname_vod__c</fullName>
        <description>Event Speaker Nickname. This value is pulled in from the Nickname_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Nickname_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_vod__c</fullName>
        <description>Position of an event speaker</description>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Title_vod__c</fullName>
        <description>Title of an event session</description>
        <label>Session Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured.</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature.</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Formatted_Name_vod__c</fullName>
        <formula>Speaker_vod__r.Speaker_Formatted_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Name_vod__c</fullName>
        <description>Name of the speaker for an event.</description>
        <formula>Speaker_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker for an event.</description>
        <label>Speaker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Speaker_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Eligible_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipLabel>Event Speakers</relationshipLabel>
        <relationshipName>Speakers_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the speaker for the event.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nominated_vod</fullName>
                </value>
                <value>
                    <fullName>Approved_vod</fullName>
                </value>
                <value>
                    <fullName>Invited_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
                <value>
                    <fullName>Attended_vod</fullName>
                </value>
                <value>
                    <fullName>Signed_vod</fullName>
                </value>
                <value>
                    <fullName>Cleared_Signature_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Suffix_vod__c</fullName>
        <description>Event Speaker Suffix. This value is pulled in from the Suffix_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Suffix_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suffix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_vod__c</fullName>
        <description>Used to find Contracts with matching Tier information for generating Speaker Contracts.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Event Speaker Title. This value is pulled in from the Title_vod field on Speaker record.</description>
        <formula>Speaker_vod__r.Title_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Number_vod__c</fullName>
        <description>Used to store travel details, such as a flight or train number.</description>
        <label>Vessel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Panelist_URL_vod__c</fullName>
        <label>Webinar Panelist URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplace_vod__c</fullName>
        <description>Workplace of an event speaker</description>
        <label>Workplace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESP-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Speakers</pluralLabel>
    <recordTypes>
        <fullName>Event_Speaker_vod</fullName>
        <active>true</active>
        <description>Event Speaker</description>
        <label>Event_Speaker_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>